# singledispatch-native

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
src/: lib.rs
src/singledispatch/: builtins.rs  core.rs  mod.rs  mro.rs  typeref.rs  typing.rs
tests/: test_singledispatch_native.py
