[package]
name = "singledispatch-native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "singledispatch_native"
crate-type = ["cdylib"]

[dependencies]

[dependencies.pyo3]
version = "0.25.0"
# "abi3-py39" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.9
features = ["abi3-py39"]
