[project]
name = "singledispatch-native"
version = "0.1.0"
description = "Native version of `functools.singledispatch` written in Rust"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[dependency-groups]
dev = [
    "maturin",
    "pytest",
]

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]